# reddit-stocks-webscrapper

./: .gitignore  README.md  buildspec.yml  package.json  pyproject.toml  pyvenv.cfg  requirements.txt  serverless.yml
reddit_finance_webscrapper/: handler.py  main.py
reddit_finance_webscrapper.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_reddit_finance_webscrapper.py
